# gr-corrsounder

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.md  README.md
apps/: CMakeLists.txt
cmake/: cmake_uninstall.cmake.in
cmake/Modules/: corrsounderConfig.cmake
docs/: README.corrsounder
docs/doxygen/: Doxyfile.in
docs/doxygen/other/: group_defs.dox  (+1 more)
examples/: README.md  captureoverflow.grc  fzc.grc  fzc_with_overflows.grc  fzcsource.grc  overflowdetection.grc  overflowdetectionperformance.grc  overflowdetectionuhd.grc  overflowgenerator.grc  simoverflows.grc  snapshot-approach.grc
grc/: CMakeLists.txt  corrsounder_error_correction_cc.xml  corrsounder_ir_snr.xml  corrsounder_moving_average_vcc.xml  corrsounder_moving_average_vcc.xml~  corrsounder_ramdisk_file_sink_vc.xml  corrsounder_seq_correlator_cc.xml  corrsounder_seq_gate_cc.xml  corrsounder_seq_source_c.xml
include/corrsounder/: CMakeLists.txt  api.h  sequence_gate_cc.h
lib/: CMakeLists.txt  qa_corrsounder.cc  qa_corrsounder.h  sequence_gate_cc_impl.cc  sequence_gate_cc_impl.h  test_corrsounder.cc
python/: CMakeLists.txt  __init__.py  error_correction_cc.py  fzc_correlator_c.py  fzc_source_c.py  ir_snr.py  moving_average_vcc.py  qa_error_correction_cc.py  qa_fzc_correlator_c.py  qa_fzc_source_c.py  qa_ir_snr.py  qa_moving_average_vcc.py  qa_ramdisk_file_sink_vc.py  qa_sequence_gate_cc.py  ramdisk_file_sink_vc.py
python/pycorrsounder/: CMakeLists.txt  __init__.py  corrsounder.py  error_correction.py  test_suite.py  transmission_factor.py  utils.py
swig/: CMakeLists.txt  corrsounder_swig.i
